--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,10 +1,17 @@
 [target.i686-unknown-linux-gnu]
 linker = "i686-linux-gnu-gcc"
-rustflags = ["-C", "target-feature=-crt-static"]
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
-rustflags = ["-C", "target-feature=-crt-static"]
+
+[target.armv7-unknown-linux-gnueabihf]
+linker = "arm-linux-gnueabihf-gcc"
 
 [target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "target-feature=+crt-static"]
+
+[target.aarch64-pc-windows-msvc]
+rustflags = ["-C", "target-feature=+crt-static"]
+
+[target.i686-pc-windows-msvc]
 rustflags = ["-C", "target-feature=+crt-static"]
