--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,20 +1,13 @@
-name: cargo b(inary)install
-
-permissions: write-all
+name: Build
 
 on:
   push:
     branches:
       - main
-    tags-ignore:
-      - "**"
-    paths-ignore:
-      - "**/*.md"
-      - LICENSE
-      - "**/*.gitignore"
-      - .editorconfig
-      - docs/**
-  pull_request: null
+
+    paths:
+      - package.json
+      - Cargo.toml
 
 jobs:
   create-release:
@@ -52,7 +45,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: version,
-              name: `CLI Binaries v${version}`,
+              name: `AHQ Store CLI v${version}`,
               body: String(fs.readFileSync("./latest.md")),
               draft: true,
               prerelease: false
@@ -98,50 +91,64 @@ jobs:
               return data.upload_url;
             }
 
+  cargo:
+    name: Publish to cargo
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Setup Cargo
+        run: rustup toolchain add stable
+
+      - name: Publish
+        run: cargo publish --allow-dirty
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
+
   build:
+    name: Build CLI and Dylib
+
     needs: [create-release]
+
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            friendlyName: x86_64 Linux
-
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            friendlyName: Arm64 Linux
 
           - os: ubuntu-latest
             target: i686-unknown-linux-gnu
-            friendlyName: x86 Linux
+
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+
+          - os: ubuntu-latest
+            target: armv7-unknown-linux-gnueabihf
 
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            friendlyName: x86_64 Windows
 
           - os: windows-latest
             target: i686-pc-windows-msvc
-            friendlyName: x86 Windows
 
           - os: windows-latest
             target: aarch64-pc-windows-msvc
-            friendlyName: Arm64 Windows
 
-          # - os: macos-latest
-          #   target: x86_64-apple-darwin
-          #   friendlyName: x86_64 Macos
+          - os: macos-latest
+            target: x86_64-apple-darwin
 
-          # - os: macos-latest
-          #   target: aarch64-apple-darwin
-          #   friendlyName: Arm64 Macos
+          - os: macos-latest
+            target: aarch64-apple-darwin
 
-    name: Build CLI for ${{ matrix.friendlyName }} (${{ matrix.os }}-${{ matrix.target }})
     runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup Rust Nightly
         run: rustup toolchain add nightly-${{ matrix.target }} --force-non-host
@@ -150,17 +157,14 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install zip gcc-aarch64-linux-gnu gcc-i686-linux-gnu
+          sudo apt-get install zip gcc-aarch64-linux-gnu gcc-i686-linux-gnu gcc-arm-linux-gnueabihf
 
-      - name: Build CLI
-        run: cargo build --release
-
-      - name: chmod 777
-        if: matrix.os != 'windows-latest'
-        run: chmod 777 ./bundle
+      - name: Build
+        run: cargo build --release --target ${{ matrix.target }}
 
       - name: Bundle CLI
         run: ./bundle
+        shell: pwsh
         env:
           TARGET: ${{ matrix.target }}
 
@@ -171,13 +175,72 @@ jobs:
           files: ./ahqstore_cli_rs-${{ matrix.target }}.zip
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-  publish:
-    needs: [create-release, build]
-    name: Publish Release
+      - name: Upload to Releases (UNIX based)
+        uses: AButler/upload-release-assets@v3.0
+        if: matrix.os == 'ubuntu-latest'
+        with:
+          release-id: ${{ needs.create-release.outputs.release_id }}
+          files: ./libahqstore_cli_rs-${{ matrix.target }}.so
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload to Releases (Windows based)
+        uses: AButler/upload-release-assets@v3.0
+        if: matrix.os == 'windows-latest'
+        with:
+          release-id: ${{ needs.create-release.outputs.release_id }}
+          files: ./ahqstore_cli_rs-${{ matrix.target }}.dll
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload to Releases (MacOS based)
+        uses: AButler/upload-release-assets@v3.0
+        if: matrix.os == 'macos-latest'
+        with:
+          release-id: ${{ needs.create-release.outputs.release_id }}
+          files: ./libahqstore_cli_rs-${{ matrix.target }}.dylib
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+  npm:
+    name: Publish to npmjs
+
+    needs: [build]
+
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Setup node
+        uses: actions/setup-node@v5
+        with:
+          node-version: 22
+
+      - name: Setup pnpm
+        run: npm i -g pnpm
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Publish
+        run: |
+          npm config set provenance true
+
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          npm publish --access public
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  publish:
+    needs: [create-release, build, npm, cargo]
+    name: Publish Release
+    runs-on: ubuntu-latest
+
+    if: always()
+
+    steps:
       - name: Undraft Release
+        if: success()
         uses: actions/github-script@v7
         env:
           R_ID: ${{ needs.create-release.outputs.release_id }}
@@ -188,4 +251,17 @@ jobs:
               repo: context.repo.repo,
               release_id: process.env.R_ID,
               draft: false
+            });
+
+      - name: Delete Release
+        if: failure()
+        uses: actions/github-script@v7
+        env:
+          R_ID: ${{ needs.create-release.outputs.release_id }}
+        with:
+          script: |
+            github.rest.repos.deleteRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: process.env.R_ID,
             });
