--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: version,
-              name: `AHQ Store CLI v${version}`,
+              name: `AHQ Store CLI Binaries v${version}`,
               body: String(fs.readFileSync("./latest.md")),
               draft: true,
               prerelease: false
