--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -238,8 +238,41 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  python:
+    runs-on: ubuntu-latest
+
+    needs: [build]
+
+    permissions:
+      id-token: write # Required for OIDC
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x" # Specify your Python version
+
+      - name: Install dependencies
+        working-directory: python
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+
+      - name: Build package
+        run: python -m build
+        working-directory: python
+
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: python
+          attestations: true
+
   publish:
-    needs: [create-release, build, npm, cargo]
+    needs: [create-release, build, npm, python, cargo]
     name: Publish Release
     runs-on: ubuntu-latest
 
