--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -270,7 +270,7 @@ jobs:
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: python
+          packages-dir: python/dist
           attestations: true
 
   publish:
