integrate with ghpkg

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -228,11 +228,19 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Publish
+      - name: Publish to npmjs
         run: |
           npm config set provenance true
 
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          npm publish --access public
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish to GH Packages
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}" > ~/.npmrc
           npm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
