--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -321,7 +321,7 @@ jobs:
           attestations: true
 
   publish:
-    needs: [create-release, build, npm, python, cargo]
+    needs: [create-release, build, npm, python, cargo, dotnet]
     name: Publish Release
     runs-on: ubuntu-latest
 
@@ -345,7 +345,7 @@ jobs:
     name: Unpublish this release
     runs-on: ubuntu-latest
 
-    needs: [create-release, build, npm, cargo]
+    needs: [create-release, build, npm, cargo, python, dotnet]
 
     if: failure()
 
