--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -213,9 +213,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      id-token: write
+    permissions: write-all
 
     steps:
       - name: Checkout
