--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -267,9 +267,12 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: 22
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Setup pnpm
-        run: npm i -g pnpm
+        run: |
+          npm i -g npm@latest
+          npm i -g pnpm
 
       - name: Install dependencies
         run: pnpm install
@@ -280,12 +283,9 @@ jobs:
       - name: Publish to npmjs
         run: |
           npm config set provenance true
-
-          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
           npm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Setup node for github
         uses: actions/setup-node@v5
