--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,4 @@
+# Linux GNU
 [target.i686-unknown-linux-gnu]
 linker = "i686-linux-gnu-gcc"
 
@@ -6,6 +7,19 @@ linker = "aarch64-linux-gnu-gcc"
 
 [target.armv7-unknown-linux-gnueabihf]
 linker = "arm-linux-gnueabihf-gcc"
+
+# Linker MUSL
+[target.i686-unknown-linux-musl]
+pre-build = ["apt-get update && apt-get install -y nasm"]
+linker = "lld"
+
+[target.aarch64-unknown-linux-musl]
+pre-build = ["apt-get update && apt-get install -y nasm"]
+linker = "lld"
+
+[target.armv7-unknown-linux-musleabihf]
+pre-build = ["apt-get update && apt-get install -y nasm"]
+linker = "lld"
 
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-C", "target-feature=+crt-static"]
