--- a/dotnet/dotnet.csproj
+++ b/dotnet/dotnet.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -16,7 +16,7 @@
 
     <!-- Package Information -->
     <PackageId>AHQStoreCLI</PackageId>
-    <Version>0.15.0</Version>
+    <Version>0.16.0</Version>
     <Authors>AHQ Softwares</Authors>
     <Description>AHQ Store Official CLI, A port of the rust version to C#</Description>
 
@@ -38,3 +38,6 @@
 
 
 </Project>
+
+
+
