--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -105,10 +105,14 @@ jobs:
       - name: Setup Cargo
         run: rustup toolchain add stable
 
+      - name: Get Cargo OIDC Auth
+        uses: rust-lang/crates-io-auth-action@v1
+        id: auth
+
       - name: Publish
         run: cargo publish --allow-dirty
         env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
 
   build:
     name: Build CLI and Dylib
@@ -189,7 +193,9 @@ jobs:
         if: contains(matrix.target, 'musl')
         run: |
           cargo install cross --git https://github.com/cross-rs/cross
-          cross build --release --target ${{ matrix.target }}
+          cargo update
+          cargo metadata
+          cross build -v --release --target ${{ matrix.target }}
 
       - name: Bundle CLI
         run: |
@@ -293,7 +299,7 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: 22
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
 
       - name: Setup pnpm
         run: |
