--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,30 @@ path = "src/main.rs"
 pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.zip"
 pkg-fmt = "zip"
 
+[workspace.metadata.cross.target.aarch64-unknown-linux-musl]
+pre-build = [
+  "dpkg --add-architecture $CROSS_DEB_ARCH",
+  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH nasm",
+]
+
+[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
+pre-build = [
+  "dpkg --add-architecture $CROSS_DEB_ARCH",
+  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH nasm",
+]
+
+[workspace.metadata.cross.target.i686-unknown-linux-musl]
+pre-build = [
+  "dpkg --add-architecture $CROSS_DEB_ARCH",
+  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH nasm",
+]
+
+[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
+pre-build = [
+  "dpkg --add-architecture $CROSS_DEB_ARCH",
+  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH nasm",
+]
+
 [dependencies]
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
@@ -38,7 +62,9 @@ aws-lc-rs = { version = "^1", features = ["prebuilt-nasm"] }
 dialoguer = "^0.12"
 indicatif = "^0.18"
 console = "^0.16"
-rustls = { version = "^0.23", default-features = false, features = ["aws_lc_rs"] }
+rustls = { version = "^0.23", default-features = false, features = [
+  "aws_lc_rs",
+] }
 reqwest = "^0.13"
 tokio = { version = "^1", features = ["rt", "time", "macros"] }
 
