--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,29 +21,8 @@ path = "src/main.rs"
 pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.zip"
 pkg-fmt = "zip"
 
-[workspace.metadata.cross.target.aarch64-unknown-linux-musl]
-pre-build = [
-  "dpkg --add-architecture $CROSS_DEB_ARCH",
-  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH nasm",
-]
-
-[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
-pre-build = [
-  "dpkg --add-architecture $CROSS_DEB_ARCH",
-  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH nasm",
-]
-
-[workspace.metadata.cross.target.i686-unknown-linux-musl]
-pre-build = [
-  "dpkg --add-architecture $CROSS_DEB_ARCH",
-  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH nasm",
-]
-
-[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
-pre-build = [
-  "dpkg --add-architecture $CROSS_DEB_ARCH",
-  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH nasm",
-]
+[workspace.metadata.cross.build]
+pre-build = ["apt-get update && apt-get --assume-yes install nasm musl-tools"]
 
 [dependencies]
 serde = { version = "^1", features = ["derive"] }
