--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,14 +9,21 @@ linker = "aarch64-linux-gnu-gcc"
 linker = "arm-linux-gnueabihf-gcc"
 
 # Linker MUSL
+[target.x86_64-unknown-linux-musl]
+linker = "lld"
+rustflags = ["-C", "target-feature=-crt-static"]
+
 [target.i686-unknown-linux-musl]
 linker = "lld"
+rustflags = ["-C", "target-feature=-crt-static"]
 
 [target.aarch64-unknown-linux-musl]
 linker = "lld"
+rustflags = ["-C", "target-feature=-crt-static"]
 
 [target.armv7-unknown-linux-musleabihf]
 linker = "lld"
+rustflags = ["-C", "target-feature=-crt-static"]
 
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-C", "target-feature=+crt-static"]
