--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -195,7 +195,7 @@ jobs:
         run: |
           cargo install cross --git https://github.com/cross-rs/cross
           cargo update
-          cross build -v --release --target ${{ matrix.target }}
+          cross build -v --release --target ${{ matrix.target }} --bin ahqstore
 
       - name: Bundle CLI
         run: |
