--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -88,48 +88,48 @@ jobs:
                 path    = "package.json"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "package.json")
+                content = (Get-Content "package.json" -Raw)
               },
               @{
                 path    = "jsr.json"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "jsr.json")
+                content = (Get-Content "jsr.json" -Raw)
               },
               @{
                 path    = "dart/pubspec.yaml"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./dart/pubspec.yaml")
+                content = (Get-Content "./dart/pubspec.yaml" -Raw)
               },
               @{
                 path    = "dart/bin/ahqstore.dart"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./dart/bin/ahqstore.dart")
+                content = (Get-Content "./dart/bin/ahqstore.dart" -Raw)
               },
               @{
                 path    = "go/ahqstore.go"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./go/ahqstore.go")
+                content = (Get-Content "./go/ahqstore.go" -Raw)
               },
               @{
                 path    = "dotnet/dotnet.csproj"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./dotnet/dotnet.csproj")
+                content = (Get-Content "./dotnet/dotnet.csproj" -Raw)
               },
               @{
                 path    = "python/pyproject.toml"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./python/pyproject.toml")
+                content = (Get-Content "./python/pyproject.toml" -Raw)
               }
             )
           } | ConvertTo-Json -Depth 10
 
-          $newTree = gh api repos/$repo/git/trees -X POST -f "$treeBody" | ConvertFrom-Json
+          $newTree = $treeBody | gh api repos/$repo/git/trees -X POST --input - | ConvertFrom-Json
           $newTreeSha = $newTree.sha
 
           Write-Host "New tree: $newTreeSha"
