--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -143,7 +143,10 @@ jobs:
             tree    = $newTreeSha
           } | ConvertTo-Json -Depth 10
 
-          $newCommit = gh api repos/$repo/git/commits -X POST -f "$commitBody" | ConvertFrom-Json
+          $newCommit = $commitBody |
+            gh api repos/$repo/git/commits -X POST --input - |
+            ConvertFrom-Json
+
           $newCommitSha = $newCommit.sha
 
           Write-Host "New commit: $newCommitSha"
