--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
     outputs:
       upload_url: ${{ steps.get-u-url.outputs.result }}
       release_id: ${{ steps.get-id.outputs.result }}
-      sha: ${{ steps.commit.outputs.sha }}
+      sha: ${{ steps.signed-commit.outputs.sha }}
 
     steps:
       - name: Generate GitHub App token
@@ -82,49 +82,49 @@ jobs:
                 path    = ".build"
                 mode    = "100644"
                 type    = "blob"
-                content = $build
+                content = $build.Trim()
               },
               @{
                 path    = "package.json"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "package.json" -Raw)
+                content = (Get-Content "package.json" -Raw).Trim()
               },
               @{
                 path    = "jsr.json"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "jsr.json" -Raw)
+                content = (Get-Content "jsr.json" -Raw).Trim()
               },
               @{
                 path    = "dart/pubspec.yaml"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./dart/pubspec.yaml" -Raw)
+                content = (Get-Content "./dart/pubspec.yaml" -Raw).Trim()
               },
               @{
                 path    = "dart/bin/ahqstore.dart"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./dart/bin/ahqstore.dart" -Raw)
+                content = (Get-Content "./dart/bin/ahqstore.dart" -Raw).Trim()
               },
               @{
                 path    = "go/ahqstore.go"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./go/ahqstore.go" -Raw)
+                content = (Get-Content "./go/ahqstore.go" -Raw).Trim()
               },
               @{
                 path    = "dotnet/dotnet.csproj"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./dotnet/dotnet.csproj" -Raw)
+                content = (Get-Content "./dotnet/dotnet.csproj" -Raw).Trim()
               },
               @{
                 path    = "python/pyproject.toml"
                 mode    = "100644"
                 type    = "blob"
-                content = (Get-Content "./python/pyproject.toml" -Raw)
+                content = (Get-Content "./python/pyproject.toml" -Raw).Trim()
               }
             )
           } | ConvertTo-Json -Depth 10
@@ -454,9 +454,15 @@ jobs:
         run: npx jsr publish
 
       - name: Publish to npmjs
+        shell: pwsh
         run: |
           npm config set provenance true
-          npm publish --access public
+
+          try {
+            npm publish --access public
+          } catch {
+            npm publish --access public --tag next
+          }
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -467,8 +473,13 @@ jobs:
           registry-url: https://npm.pkg.github.com/
 
       - name: Publish to GH Packages
+        shell: pwsh
         run: |
-          npm publish --access public
+          try {
+            npm publish --access public
+          } catch {
+            npm publish --access public --tag next
+          }
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -553,7 +564,7 @@ jobs:
           attestations: true
 
   publish:
-    needs: [create-release, build, npm, python, cargo, dotnet]
+    needs: [create-release, build]
     name: Publish Release
     runs-on: ubuntu-latest
 
@@ -577,7 +588,7 @@ jobs:
     name: Unpublish this release
     runs-on: ubuntu-latest
 
-    needs: [create-release, build, npm, cargo, python, dotnet]
+    needs: [create-release, build]
 
     if: failure()
 
