--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -125,6 +125,12 @@ jobs:
                 mode    = "100644"
                 type    = "blob"
                 content = (Get-Content "./python/pyproject.toml" -Raw).Trim()
+              },
+              @{
+                path    = "README.md"
+                mode    = "100644"
+                type    = "blob"
+                content = (Get-Content "./README.md" -Raw).Trim()
               }
             )
           } | ConvertTo-Json -Depth 10
@@ -233,9 +239,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    needs: [create-release]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          ref: ${{ needs.create-release.outputs.sha }}
 
       - name: Setup Cargo
         run: rustup toolchain add stable
