--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "ahqstore_cli_rs"
-version = "0.16.0-alpha.20"
+version = "0.16.0-alpha.21"
 description = "AHQ Store Developers' CLI"
 repository = "https://github.com/ahqstore/cli"
 homepage = "https://github.com/ahqstore/cli"
@@ -10,8 +10,9 @@ readme = "README.md"
 
 [lib]
 name = "ahqstore_cli_rs"
-crate-type = ["cdylib"]
+crate-type = ["rlib", "cdylib"]
 path = "src/lib.rs"
+doc = false
 
 [[bin]]
 name = "ahqstore"
@@ -46,6 +47,8 @@ rustls = { version = "^0.23", default-features = false, features = [
 ] }
 reqwest = "^0.13"
 tokio = { version = "^1", features = ["rt", "time", "macros"] }
+strsim = "^0.11"
+schemars = { version = "^1.2", optional = true }
 
 [target.'cfg(target_env="musl")'.dependencies]
 mimalloc = "^0.1"
@@ -55,3 +58,7 @@ lto = "fat"
 strip = true
 opt-level = "z"
 codegen-units = 1
+
+[features]
+schemars = ["dep:schemars"]
+debug = []
