--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "ahqstore_cli_rs"
-version = "0.16.0-alpha.21"
+version = "0.16.0-alpha.23"
 description = "AHQ Store Developers' CLI"
 repository = "https://github.com/ahqstore/cli"
 homepage = "https://github.com/ahqstore/cli"
@@ -28,7 +28,7 @@ pre-build = ["apt-get update && apt-get --assume-yes install nasm clang"]
 [dependencies]
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
-ahqstore-types = { version = "^4", features = ["apps_repo"] }
+ahqstore-types = { version = "^4", features = ["apps_repo", "schemars"] }
 image = { version = "^0.25", default-features = false, features = ["png"] }
 rand = "^0.10"
 semver = "^1"
@@ -48,7 +48,9 @@ rustls = { version = "^0.23", default-features = false, features = [
 reqwest = "^0.13"
 tokio = { version = "^1", features = ["rt", "time", "macros"] }
 strsim = "^0.11"
-schemars = { version = "^1.2", optional = true }
+schemars = { version = "^1.2" }
+tar = "^0.4"
+base64 = "^0.22"
 
 [target.'cfg(target_env="musl")'.dependencies]
 mimalloc = "^0.1"
@@ -60,5 +62,4 @@ opt-level = "z"
 codegen-units = 1
 
 [features]
-schemars = ["dep:schemars"]
 debug = []
