--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,8 @@ jobs:
         with:
           app-id: 2897553
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          repositories: cli,cli-go
+          permission-actions: write
 
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -241,7 +243,7 @@ jobs:
           script: |
             const id = 188069552;
 
-            github.rest.actions.createWorkflowDispatch({
+            await github.rest.actions.createWorkflowDispatch({
               owner: "ahqstore",
               repo: "cli-go",
               workflow_id: id,
